# labaratory

./: CMakeLists.txt  ConsoleApplication1.cpp  README.md  input.txt  main.cpp  string-utils.cpp  string-utils.h
StringProject/: CMakeLists.txt  README.md
StringProject/App/: CMakeLists.txt  main.cpp
StringProject/StringLib/: CMakeLists.txt
StringProject/StringLib/include/: StringLib.h
StringProject/StringLib/src/: StringLib.cpp
qwerty/: main.cpp
qwerty/project5/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
qwerty/qwerty/: Cmakelist.txt  main.cpp
